Protect CPU sensor Windows ACLs